# tm-mumble-bridge

./: .gitignore  Cargo.toml  build.rs  docker-compose.yml
src/: app.rs  error.rs  main.rs  maniaplanet_telemetry.rs  mp_telemetry_data.rs  tcp_server.rs  util.rs
